# educational-multiparty-agents

./: .gitignore  README.md  question.md
client/lib/: pyproject.toml
client/lib/client_lib/: events.py  handler.py  ollama_llm.py  prompts.py
client/src/: main.py
client/student/: pyproject.toml
client/student/src/: main.py  student_state.py
client/teacher/: pyproject.toml
client/teacher/src/: lesson.py  main.py
folder/: main(5).tex  readme.txt
lib/shared_lib/: events.py  stream.py  utils.py
programs/client/turn-taking-controller/: pyproject.toml
programs/client/turn-taking-controller/src/: chatterbox_tts.py  config.py  event_handlers.py  events.py  llama_agent.py  main.py  ollama_llm.py  turn_manager.py  whisper_stt.py
programs/server/lib/: pyproject.toml
programs/server/lib/server_lib/: chatterbox_tts.py  events.py  handler.py  ollama_llm.py
programs/server/student/: pyproject.toml
programs/server/student/src/: main.py
programs/server/teacher/: pyproject.toml
programs/server/teacher/src/: event.py  main.py  ollama_llm.py  utils.py
programs/server/teacher/src/lib/: chatterbox_tts.py  whisper_stt.py
report/: Primo_BibTeX_Export(2).bib  readme.txt  references.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex
report/components/: abstract.tex  conclusions.tex  evaluation.tex  implementation.tex  introduction.tex  previous_work.tex  system_design.tex
server/: test.py
server/src/: events.py  main.py
server/src/lib/: events.py  prompts.py
server/turn-taking-controller/: pyproject.toml
server/turn-taking-controller/src/: australian-voice.m4a  chatterbox_tts.py  config.py  event_handlers.py  events.py  generate_voice_samples.py  main.py  turn_manager.py  whisper_stt.py
src/client/lib/client_lib/: config.py  events.py  ollama_llm.py  prompts.py
src/client/student/src/: prompt.py
src/client/teacher/: pyproject.toml
src/client/teacher/src/: main.py  prompt.py
src/lib/: pyproject.toml
src/lib/shared_lib/: utils.py
src/server/turn-taking-controller/: pyproject.toml
src/server/turn-taking-controller/src/: config.py  event_handlers.py  whisper_stt.py
