[project]
name = "client-lib"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "shared-lib",
]

[tool.uv.sources]
shared-lib = { path = "../../lib", editable = true }

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

