[project]
name = "teacher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "server-lib>=0.1.0",
    "shared-lib>=0.1.0",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.uv.sources]
shared-lib = { path = "../../../lib", editable = true }
server-lib = { path = "../lib", editable = true }

